--- a/Project 1 - Finding Opportunities in Android and iOS Mobile Application Market/Finding Opportunities in Android and iOS Mobile Application Market.ipynb
+++ b/Project 1 - Finding Opportunities in Android and iOS Mobile Application Market/Finding Opportunities in Android and iOS Mobile Application Market.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Finding Opportunities in Android and iOS Mobile Application Market\n",
+    "\n",
     "# Introduction\n",
     "\n",
     "On this project, we will assume the role of an analyst for a company that develops mobile applications. The goal of this project is to help stakeholders understand what type of apps are likely to attract more users on Google Play and the Apple App Store. The following are the data sets that will be used throughout the project:\n",
@@ -901,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1225,8 +1227,6 @@
     }
    ],
    "source": [
-    "import operator\n",
-    "\n",
     "genres_ios = freq_table(ios_final, -5)\n",
     "\n",
     "unsorted_genres_ios = {}\n",
@@ -1348,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {
     "scrolled": false
    },
@@ -1430,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1510,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1809,7 +1809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1848,7 +1848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 32,
    "metadata": {
     "scrolled": true
    },
@@ -1919,7 +1919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2134,7 +2134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
