--- a/Project 2 - Exploring Hacker News Post/Exploring Hacker News Post.ipynb
+++ b/Project 2 - Exploring Hacker News Post/Exploring Hacker News Post.ipynb
@@ -150,22 +150,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9139\n",
-      "10158\n",
-      "273822\n",
+      "Ask posts has  9139  number of post\n",
+      "Show posts has  10158  number of post\n",
+      "Other posts has  273822  number of post\n",
       "\n",
       "\n",
-      "[['12578908', 'Ask HN: What TLD do you use for local development?', '', '4', '7', 'Sevrene', '9/26/2016 2:53'], ['12578522', 'Ask HN: How do you pass on your work when you die?', '', '6', '3', 'PascLeRasc', '9/26/2016 1:17'], ['12577908', 'Ask HN: How a DNS problem can be limited to a geographic region?', '', '1', '0', 'kuon', '9/25/2016 22:57'], ['12577870', 'Ask HN: Why join a fund when you can be an angel?', '', '1', '3', 'anthony_james', '9/25/2016 22:48'], ['12577647', 'Ask HN: Someone uses stock trading as passive income?', '', '5', '2', '00taffe', '9/25/2016 21:50']]\n",
+      "Sample of Ask posts\n",
+      "['12578908', 'Ask HN: What TLD do you use for local development?', '', '4', '7', 'Sevrene', '9/26/2016 2:53'] \n",
+      "\n",
+      "['12578522', 'Ask HN: How do you pass on your work when you die?', '', '6', '3', 'PascLeRasc', '9/26/2016 1:17'] \n",
+      "\n",
+      "['12577908', 'Ask HN: How a DNS problem can be limited to a geographic region?', '', '1', '0', 'kuon', '9/25/2016 22:57'] \n",
+      "\n",
+      "['12577870', 'Ask HN: Why join a fund when you can be an angel?', '', '1', '3', 'anthony_james', '9/25/2016 22:48'] \n",
+      "\n",
+      "['12577647', 'Ask HN: Someone uses stock trading as passive income?', '', '5', '2', '00taffe', '9/25/2016 21:50'] \n",
       "\n",
       "\n",
-      "[['12578335', 'Show HN: Finding puns computationally', 'http://puns.samueltaylor.org/', '2', '0', 'saamm', '9/26/2016 0:36'], ['12578182', 'Show HN: A simple library for complicated animations', 'https://christinecha.github.io/choreographer-js/', '1', '0', 'christinecha', '9/26/2016 0:01'], ['12578098', 'Show HN: WebGL visualization of DNA sequences', 'http://grondilu.github.io/dna.html', '1', '0', 'grondilu', '9/25/2016 23:44'], ['12577991', 'Show HN: Pomodoro-centric, heirarchical project management with ES6 modules', 'https://github.com/jakebian/zeal', '2', '0', 'dbranes', '9/25/2016 23:17'], ['12577142', 'Show HN: Jumble  Essays on the go #PaulInYourPocket', 'https://itunes.apple.com/us/app/jumble-find-startup-essay/id1150939197?ls=1&mt=8', '1', '1', 'ryderj', '9/25/2016 20:06']]\n"
+      "\n",
+      "Sample of Show posts\n",
+      "['12578335', 'Show HN: Finding puns computationally', 'http://puns.samueltaylor.org/', '2', '0', 'saamm', '9/26/2016 0:36'] \n",
+      "\n",
+      "['12578182', 'Show HN: A simple library for complicated animations', 'https://christinecha.github.io/choreographer-js/', '1', '0', 'christinecha', '9/26/2016 0:01'] \n",
+      "\n",
+      "['12578098', 'Show HN: WebGL visualization of DNA sequences', 'http://grondilu.github.io/dna.html', '1', '0', 'grondilu', '9/25/2016 23:44'] \n",
+      "\n",
+      "['12577991', 'Show HN: Pomodoro-centric, heirarchical project management with ES6 modules', 'https://github.com/jakebian/zeal', '2', '0', 'dbranes', '9/25/2016 23:17'] \n",
+      "\n",
+      "['12577142', 'Show HN: Jumble  Essays on the go #PaulInYourPocket', 'https://itunes.apple.com/us/app/jumble-find-startup-essay/id1150939197?ls=1&mt=8', '1', '1', 'ryderj', '9/25/2016 20:06'] \n",
+      "\n"
      ]
     }
    ],
@@ -186,15 +206,19 @@
     "        other_posts.append(row)\n",
     "\n",
     "# Check the number of posts on each list\n",
-    "print(len(ask_posts))\n",
-    "print(len(show_posts))\n",
-    "print(len(other_posts))\n",
+    "print('Ask posts has ',len(ask_posts),' number of post')\n",
+    "print('Show posts has ',len(show_posts),' number of post')\n",
+    "print('Other posts has ',len(other_posts),' number of post')\n",
     "print('\\n')\n",
     "\n",
     "# Confirm that the list contains the correct types of post\n",
-    "print(ask_posts[0:5])\n",
+    "print('Sample of Ask posts')\n",
+    "for row in ask_posts[0:5]:\n",
+    "    print(row,'\\n')\n",
     "print('\\n')\n",
-    "print(show_posts[0:5])"
+    "print('Sample of Show posts')\n",
+    "for row in show_posts[0:5]:\n",
+    "    print(row,'\\n')"
    ]
   },
   {
@@ -208,18 +232,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The average number of comments for ask posts is 10.393478498741656\n",
-      "The average number of comments for show posts is 4.886099625910612\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create a variable to sum the number of comments for Ask HN type\n",
     "total_ask_comments = 0\n",
@@ -265,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,43 +324,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['02', 11.137546468401487],\n",
-       " ['01', 7.407801418439717],\n",
-       " ['22', 8.804177545691905],\n",
-       " ['21', 8.687258687258687],\n",
-       " ['19', 7.163043478260869],\n",
-       " ['17', 9.449744463373083],\n",
-       " ['15', 28.676470588235293],\n",
-       " ['14', 9.692007797270955],\n",
-       " ['13', 16.31756756756757],\n",
-       " ['11', 8.96474358974359],\n",
-       " ['10', 10.684397163120567],\n",
-       " ['09', 6.653153153153153],\n",
-       " ['07', 7.013274336283186],\n",
-       " ['03', 7.948339483394834],\n",
-       " ['23', 6.696793002915452],\n",
-       " ['20', 8.749019607843136],\n",
-       " ['16', 7.713298791018998],\n",
-       " ['08', 9.190661478599221],\n",
-       " ['00', 7.5647840531561465],\n",
-       " ['18', 7.94299674267101],\n",
-       " ['12', 12.380116959064328],\n",
-       " ['04', 9.7119341563786],\n",
-       " ['06', 6.782051282051282],\n",
-       " ['05', 8.794258373205741]]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create an empty list to store the result\n",
     "avg_by_hour = []\n",
@@ -367,43 +348,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[11.137546468401487, '02'],\n",
-       " [7.407801418439717, '01'],\n",
-       " [8.804177545691905, '22'],\n",
-       " [8.687258687258687, '21'],\n",
-       " [7.163043478260869, '19'],\n",
-       " [9.449744463373083, '17'],\n",
-       " [28.676470588235293, '15'],\n",
-       " [9.692007797270955, '14'],\n",
-       " [16.31756756756757, '13'],\n",
-       " [8.96474358974359, '11'],\n",
-       " [10.684397163120567, '10'],\n",
-       " [6.653153153153153, '09'],\n",
-       " [7.013274336283186, '07'],\n",
-       " [7.948339483394834, '03'],\n",
-       " [6.696793002915452, '23'],\n",
-       " [8.749019607843136, '20'],\n",
-       " [7.713298791018998, '16'],\n",
-       " [9.190661478599221, '08'],\n",
-       " [7.5647840531561465, '00'],\n",
-       " [7.94299674267101, '18'],\n",
-       " [12.380116959064328, '12'],\n",
-       " [9.7119341563786, '04'],\n",
-       " [6.782051282051282, '06'],\n",
-       " [8.794258373205741, '05']]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "swap_avg_by_hour = []\n",
     "\n",
@@ -422,22 +369,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Top 5 Hours for Ask Posts Comments\n",
-      "15:00: 28.68 average comments per post\n",
-      "13:00: 16.32 average comments per post\n",
-      "12:00: 12.38 average comments per post\n",
-      "02:00: 11.14 average comments per post\n",
-      "10:00: 10.68 average comments per post\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sorted_swap = sorted(swap_avg_by_hour,reverse = True) # Sort by highest number of average comment\n",
     "\n",
